<resources>
    <string name="app_name">AppBienestar</string>
    <string name="title_activity_menu">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="txt_mision">Mision</string>
    <string name="txt_vision">Vision</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="txt_himno">Himno.Sena</string>
    <string name="txt_rutas">Rutas De Trasporte</string>
    <string name="title_activity_home">Home</string>
    <string name="txt_administrador">Administrador</string>
    <string name="txt_info_vocero">Informacion Vocero</string>
    <string name="txt_reglamento">Reglamento Al Aprendiz</string>
    <string name="txt_actividades">Actividades</string>
    <string name="txt_ayuda">Ayuda Y Sugerencia</string>
    <string name="edt_coreo">correomisena@misena</string>
    <string name="txt_registrarse">Registrarse</string>
    <string name="txt_informacion">Informacion</string>
    <string name="txt_dirigido">Dirigido A.</string>
    <string name="txt_lugar">Lugar</string>
    <string name="texto_informacion">Esta aplicación nos ayudara a mantenernos informados al tanto de lo que ocurre en el centro biotecnológico del Caribe, a fin de que esos aprendices nuevos se enteren de lo que sucede en el centro. Por medio de esta APP podríamos saber un poco de lo que el usuario desea estar informado, por medio de ello todos los que desean saber más de lo que sucede en el Sena allí podrán tener unos muy buenos resultados de la información que ellos quieren obtener. </string>
    <string name="txt_centro">CENTRO BIOTECNOLOGICO DEL CARIBE</string>
    <string name="txt_regional">REGIONAL CESAR</string>
    <string name="txt_cbc">C B C</string>
    <string name="texto_mision">El sena esta encargado de cumplir la funcion que le corresponde al estado de invertir en el desarrollo social y tecnico de los trabajadores colombianos, ofreciendo y ejecutando la formacion profesional integral, para la incorporacion y el desarrollo de las personas en actividades productivas que contribuyan al desarrollo social, economico y tecnologico del pais </string>
    <string name="texto_vision">En el 2018 el SENA será reconocido por la efectividad de su gestión, sus aportes al empleo decente y a la generación de ingresos, impactando la productividad de las personas y de las empresas; que incidirán positivamente en el desarrollo de las regiones como contribución a una Colombia educada, equitativa y en paz.</string>
    <string name="txt_infor">Infor. Bienestar Al Aprendiz</string>
    <string name="txt_usuario">Usuario</string>
    <string name="txt_contra">Contraseña</string>
    <string name="txt_ingre">Ingresar</string>
    <string name="txt_sugere">Enviar sugerencias </string>
    <string name="txt_subir">Subir Actividades</string>
</resources>
