<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.misena.oscar.appbienestar.Lugar">

    <Button
        android:id="@+id/btn_informacion"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:onClick="informacion"
        android:text="@string/txt_informacion" />

    <Button
        android:id="@+id/btn_dirigido"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="dirigido"
        android:text="@string/txt_dirigido" />

    <Button
        android:id="@+id/btn_lugar"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginLeft="255dp"
        android:layout_marginTop="10dp"
        android:onClick="lugar"
        android:text="@string/txt_lugar" />
<ImageView
    android:id="@+id/img_cbc"
    android:layout_width="300dp"
    android:layout_height="350dp"
    android:src="@mipmap/imag"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="200dp"/>
    <TextView
        android:id="@+id/txv_cbc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/txt_centro"/>
    <TextView
        android:id="@+id/txv_regional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/txt_regional"/>
    <TextView
        android:id="@+id/txv_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/txt_cbc"/>
</RelativeLayout>
