<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.misena.oscar.appbienestar.Administrador">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="40dp"
    android:text="@string/txt_infor"
    android:textSize="@dimen/tamano"
    android:textStyle="bold"/>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@mipmap/logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/txt_administrador"
        android:textStyle="bold"
        android:textSize="@dimen/tamano"/>

    <EditText
        android:id="@+id/edt_user"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/edt_pass"
        android:layout_alignLeft="@+id/edt_pass"
        android:layout_alignStart="@+id/edt_pass"
        android:layout_marginBottom="71dp"
        android:hint="@string/txt_usuario"
        android:textStyle="bold" />
    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:hint="@string/txt_contra"
        android:textStyle="bold"
        android:id="@+id/edt_pass" />

    <Button
        android:id="@+id/btn_ingresar"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:onClick="validarAdmin"
        android:text="@string/txt_ingre" />

</RelativeLayout>
